Minor style fixes to align elements properly

--- a/src/locomotec.sitetheme/locomotec/sitetheme/resources/css/styles.css
+++ b/src/locomotec.sitetheme/locomotec/sitetheme/resources/css/styles.css
@@ -6793,7 +6793,7 @@ body.tile-overlay #tile-wrapper {
   background: #c0ad97;
 }
 #sidebar-wrapper {
-  margin-top: 59px;
+  margin-top: 69px;
   background: url(../img/divide.png) 0px 0px no-repeat transparent;
 }
 #newsentry-box,
