--- a/src/locomotec.sitetheme/locomotec/sitetheme/resources/less/application.less
+++ b/src/locomotec.sitetheme/locomotec/sitetheme/resources/less/application.less
@@ -311,7 +311,7 @@ body {
 }
 
 #sidebar-wrapper {
-    margin-top: @navbarHeight + (@baseLineHeight - 1);
+    margin-top: @navbarHeight + @baseLineHeight * 1.45;
     background: url(../img/divide.png) 0px 0px no-repeat transparent;
 }
 
